syntax = "proto3";

package regen.ecocredit.v1beta1.baskets;

import "cosmos/orm/v1alpha1/orm.proto";

// BasketBalance stores the amount of credits from a batch in a basket
message BasketBalance {
    option (cosmos.orm.v1alpha1.table) = {
        id: 9,
        primary_key: {fields: "basket_denom,batch_denom"}
    };

    // basket_denom is the denom of the basket
    string basket_denom = 1;

    // batch_denom is the denom of the batch
    string batch_denom = 2;

    // balance is the amount of ecocredits held in the basket
    string balance = 3;
}